--- a/CardComponent/index.html
+++ b/CardComponent/index.html
@@ -12,40 +12,56 @@
       href="./images/favicon-32x32.png"
     />
     <title>Frontend Mentor | Stats preview card component</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="section">
-        <div class="container-texts">
-          <h1>Get <span>insights </span> that help your business grow.</h1>
-          <p>
-            Discover the benefits of data analytics and make better decisions
-            regarding revenue, customer experience, and overall efficiency.
-          </p>
+    <div class="main">
+      <div class="container">
+        <div class="section">
+          <div class="container-texts">
+            <h1>Get <span>insights </span> that help your business grow.</h1>
+            <p>
+              Discover the benefits of data analytics and make better decisions
+              regarding revenue, customer experience, and overall efficiency.
+            </p>
+          </div>
+          <div class="container-3">
+            <div class="container-followers">
+              <h2>10k+</h2>
+              <h4>companies</h4>
+            </div>
+            <div class="container-templates">
+              <h2>314</h2>
+              <h4>templates</h4>
+            </div>
+            <div class="container-queries">
+              <h2>12m+</h2>
+              <h4>queries</h4>
+            </div>
+          </div>
         </div>
-        <div class="container-3">
-          <div class="container-followers">
-            <h2>10k+</h2>
-            <h4>companies</h4>
-          </div>
-          <div class="container-templates">
-            <h2>314</h2>
-            <h4>templates</h4>
-          </div>
-          <div class="container-queries">
-            <h2>12m+</h2>
-            <h4>queries</h4>
-          </div>
+        <div class="container-img">
+          <img src="images/image-header-desktop.jpg" alt="" />
         </div>
       </div>
-      <div class="container-img"></div>
     </div>
     <footer>
       <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by <a href="index.html">Bea GM</a>.
       </div>
     </footer>
   </body>
